--- a/pycon/static/less/site.less
+++ b/pycon/static/less/site.less
@@ -380,36 +380,13 @@ aside {
 }
 
 .top-banner {
-  position: relative;
-  top: -170px;
-  height: 80px;
-  @media (max-width: 1600px) {
-    top: -170px;
-    height: 60px;
-  }
-  @media (max-width: 1400px) {
-    top: -160px;
+  .row {
     height: 50px;
-  }
-  @media (max-width: 1200px) {
-    top: -150px;
-    height: 60px;
-  }
-  @media (max-width: 979px) {
-    top: -140px;
-    height: 40px;
-  }
-  @media (max-width: 767px) {
-    top: -125px;
-    height: 30px;
-  }
-  @media (max-width: 480px) {
-    top: -120px;
-    height: 20px;
-  }
-  @media (max-width: 321px) {
-    top: -105px;
-    height: 20px;
+    img {
+      position: relative;
+      top: -130px;
+      max-width: 980px;
+    }
   }
 }
 
@@ -1692,6 +1669,8 @@ body.job-fair {
 }
 
 
+/* Calendar
+==================== */
 table.calendar {
   background-color: white;
   table-layout: fixed;
